implementar nueva gui de resultados y correccion a conexiones entre clases